Fix pre and code white space (fixes #1986) and removes white space styling from <code>  (#2185)
* remove display:inline (default is alredy inline); align to baseline grid

* change pre to not wrap (fixes #1986); target pre only, (not code)

* change code to inline-block when inside pre; apply correct nudge

* clean up and fix capitalisation

--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -35,6 +35,7 @@ $nudges: (
   nudge--h3-mobile: 0.5rem,
   nudge--h4-mobile: 0.3rem,
   nudge--p: 0.4rem,
+  nudge--p-ubuntumono: 0.45rem,
   nudge--small: 0.2rem
 ) !default;
 
